--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Nebula-API",
+  "name": "nebula-core",
   "version": "0.0.0",
-  "description": "API and micro-service generator",
+  "description": "Nebula API / micro-service project core",
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
